--- a/index.css
+++ b/index.css
@@ -85,6 +85,7 @@ padding: 20px 80px;
 display: grid;
 grid-template-rows: 1rf 1fr 1fr;
 
+
 }
 .wrapper{
   padding-top: 189px ;  
@@ -93,17 +94,27 @@ grid-template-rows: 1rf 1fr 1fr;
 }
 
 .advertisement{
-    display: flex;
+    /* display: flex;
 flex-direction: row;
-align-items:center;
+align-items:center; */
+display: grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: repeat(1, 100px);
 }
 
 .image1{
-     padding-bottom: 10px;
-    max-width: 687px;
-height: 380px;
+    /* height: auto;
+  width: 100%;
+  max-width: 700px;
+    padding-bottom: 10px;*/
+    
 top: 100px; 
 left: 750px; 
+height: auto;
+width: 100%;
+
+  display: flex;
 position: absolute;
 
 }
@@ -160,14 +171,18 @@ color: #000000;
     flex-direction: column;
     justify-content: space-between;
     background-color: #E1DEE7; */
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: repeat(2, 100px);
     display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
 padding: 100px 80px;
 gap: 86px;
-width: auto;
-height: 440px;
+width: 100%;
+height: auto;
 background: #E1DEE7;
 border-radius: 32px;
 }
@@ -237,16 +252,21 @@ justify-content: space-around;
 }
 
 .get_started{
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: repeat(2, 100px);
 gap: 32px;
-width: 757px;
-height: 222px;
+height: auto;
+  width: 100%;
+  max-width: 700px;
 display: flex;
 flex-direction: column;
 align-items: flex-start;
 padding: 0px;
 position: relative;
-width: auto;
-height:  500px;
+
+
 background: #F1F1F1;
 }
 
@@ -279,11 +299,11 @@ background: #F1F1F1;
 .search_job{
  
 
-left: 13px;
-top: 13px;
+        left: 13px;
+        top: 13px;
         background:url(./assets/Search.png);
         background-repeat:no-repeat;
-box-sizing: border-box;
+        box-sizing: border-box;
 
 width: 619px;
 height: 50px;
@@ -297,9 +317,9 @@ border-radius: 12px;
 }
 
 .nav_fancy_button3{
-    border: none;
-    margin-left: 15px;
-    display: flex;
+border: none;
+margin-left: 15px;
+display: flex;
 flex-direction: column;
 justify-content: space-around;
 align-items: center;
@@ -322,7 +342,11 @@ font-family: 'Inter';
 }
 
 .upload_cv{
-    gap: 32px;
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: repeat(2, 100px);
+    /* gap: 32px; */
 width: 757px;
 height: 222px;
 display: flex;
@@ -339,11 +363,13 @@ align-items:stretch;
 }
 
 .image2{
+    height: 100%;
+  width: 100%;
+  max-width: 700px;
     display: flex;
     /* flex-direction: row;
     justify-content:flex-end; */
-width: 687px;
-height: 458px;
+
 
 }
 
@@ -395,14 +421,14 @@ color: #FFFFFF;
 .footer{
 display: grid;
 grid-template-columns: 1fr 1fr;
-/* display: flex;
-flex-direction: row; */
-/* align-items: flex-end; */
+/* display: flex; */
+flex-direction: row; 
+align-items: flex-end;
 padding: 32px 80px;
 gap: 32px;
 
-width: auto;
-height: 110px;
+width: 100%;
+height: auto;
 
 background: #FFFFFF;
 border-radius: 32px 32px 0px 0px;
